# blkbx-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FORMAL_SEMANTICS.md  PLAN.md  README.md  RELEASING.md  REPRODUCIBILITY.md  SECURITY.md  TODO.md  deny.toml  hybrid_mechlab_flattened_README.md  pyproject.toml  pyrightconfig.json  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  settings.yml
adapters/: base.py  qwen35.py
blkbx_lab/: __init__.py  _ink_native.py  _version.py  _workspace.py  api.py  cli.py  compatibility.py  doctor.py  objects.py  render.py  results.py
configs/: README.md  qwen3.5-2b.profile.json
docs/: PERFORMANCE_BENCHMARKS.md  README.md  RUST_CORE_HARDENING_PHASE2.md  SCALABILITY_IMPROVEMENTS_PLAN.md  SECURITY.md  adapter-contract.md  bank-diligence-overlay.md  bank-verifiable-receipts.md  brand-architecture.md  design-partner-brief.md  developer-architecture.md  from-lab-to-blkbx.md  independent-verification.md  insurer-mga-overlay.md  investor-buyer-room-overlay.md  mand8-lloyds-labs-demo.md  mand8-procurement-readiness.md  migration-compatibility.md  migration-from-mech-lab.md  mvp-cli-api-contract.md  product-architecture.md  proofmail-hosted-workflow.md  public-object-spec.md  pypi.md  qwen35-validation-report.md  receipt-domain-model.md  release-readiness.md  security-hardening.md  signer-conformance-tests.md  trust-registry-revocation-runbook.md
hybrid_mechlab/: _mair.py  _rust.py  _rust.pyi  _version.py  api.py  cli.py  config.py  registry.py
internal/trace/legacy_blt/: .gitignore  PLAN.md  README.md  pyproject.toml
internal/trace/legacy_blt/scripts/: README.md
internal/trace/legacy_blt/src/blt/: __init__.py  _mair.py  capture.py  codes.py  export.py  extract.py  profiles.py  runtime.py
internal/trace/legacy_blt/src/blt/cli/: export_hm_trace.py  fit_grouped_clt.py
internal/trace/legacy_blt/src/blt/integrations/: posthoc.py
internal/trace/legacy_blt/tests/: test_trace.py
legacy/python-rust/: README.md  pyproject.toml
mech_lab/: __init__.py  _workspace.py  api.py  cli.py  objects.py
notebooks/: 00_qwen35_attach.ipynb  01_block_maps.ipynb  02_bifiltration.ipynb  03_concept_evolution.ipynb  04_ratio_comparison.ipynb
packet/: claims-ledger.md  policy.json  revocations.json  trust-registry.json
products/due-sdk/: README.md  package.json  pyproject.toml
products/due-sdk/bundles/: ai_action_audit_trail.md  disclosure_evidence_bundle.md  litigation_hold_bundle.md
products/due-sdk/docs/: api-surface.md  developer-positioning.md  legal-domain-model.md  legaltech-application-slice.md
products/due-sdk/examples/: disclosure_receipt.json  dispute_defensibility_bundle.json  legal_action_receipt.json  privilege_review_receipt.json  quickstart.py
products/due-sdk/schemas/: due.disclosure_receipt.v1.schema.json
products/due-sdk/src/due/: __init__.py  action.py  authority.py  bundle.py  disclosure.py  dispute.py  matter.py  privilege.py  receipt.py  schema.py
products/due-sdk/tests/: test_bundle.py  test_matter.py  test_receipt.py
products/mand8-sdk/: README.md  package.json  pyproject.toml
products/mand8-sdk/bundles/: actuarial_signal_export.md  renewal_evidence_pack.md  risk-control_monitoring_receipt.md  underwriting_evidence_bundle.md
products/mand8-sdk/docs/: api-surface.md  developer-positioning.md  insurance-domain-model.md  northwestern-application-slice.md
products/mand8-sdk/examples/: actuarial_signal_export.json  claims_defensibility_receipt.json  quickstart.py  renewal_evidence_pack.json  underwriting_receipt.json
products/mand8-sdk/schemas/: mand8.authority_receipt.v1.schema.json  mand8.control_receipt.v1.schema.json  mand8.risk_receipt.v1.schema.json
products/mand8-sdk/src/mand8/: __init__.py  authority.py  bundle.py  control.py  exposure.py  incident.py  override.py  receipt.py  scenarios.py  schema.py
products/mand8-sdk/tests/: test_bundle.py  test_exposure.py  test_receipt.py
python/: __init__.py
rust/crates/ink-cli/: Cargo.toml
rust/crates/ink-cli/src/: main.rs
rust/crates/ink-core/: Cargo.toml
rust/crates/ink-core/src/: benchmarks.rs  bundle.rs  canon.rs  claim.rs  compare.rs  controls.rs  digest.rs  domain.rs  error.rs  event.rs  evidence.rs  field_ids.rs  hash.rs  hashing_optimization.rs  lib.rs  lifecycle.rs  limits.rs  manifest.rs  model_waist.rs  policy.rs  pool.rs  receipt.rs  replay.rs  schema.rs  signing.rs  tests.rs  types.rs  verify.rs
rust/crates/ink-core/src/legacy/: compare.rs  mod.rs  receipt.rs  verify.rs
rust/crates/ink-host/: Cargo.toml
rust/crates/ink-host/src/: lib.rs  tests.rs
rust/crates/ink-issuer-service/: Cargo.toml
rust/crates/ink-issuer-service/src/: main.rs
rust/crates/ink-proofmail/: Cargo.toml
rust/crates/ink-proofmail/src/: lib.rs
rust/crates/ink-receipt-v2/: Cargo.toml  README.md
rust/crates/ink-receipt-v2/src/: lib.rs
rust/crates/ink-receipt-v2/test-vectors/: valid_receipt.json
rust/crates/ink-receipt-v2/tests/: verify_receipt_test.rs
rust/crates/ink-sign/: Cargo.toml
rust/crates/ink-sign/src/: lib.rs  signer.rs
rust/crates/ink-tui/: Cargo.toml
rust/crates/ink-tui/src/: main.rs
rust/crates/ink-vectors/: Cargo.toml
rust/crates/ink-vectors/src/: lib.rs
rust/crates/ink-verify/: Cargo.toml
rust/crates/ink-verify/src/: lib.rs
rust/crates/ink-wasm/: Cargo.toml
rust/crates/ink-wasm/src/: lib.rs
rust/hm_examples/: Cargo.toml
rust/hm_examples/src/: kernel_fixture.rs  qwen35_profile.rs
rust/hm_pyo3/: Cargo.toml
rust/hm_pyo3/src/: lib.rs  py_metrics.rs  py_schedule.rs  py_sparse.rs  py_topology.rs  py_trace.rs
schemas/: assurance_receipt.v1.schema.json  grouped_clt_bundle.v1.schema.json  ink.controls.v1.schema.json  ink.manifest.v2.schema.json  ink.policy.v1.schema.json  ink.receipt.v2.schema.json  ink.verification-report.v1.schema.json  ink.verify-policy.v1.schema.json  mair_graph_ir.v1.schema.json  mair_semantic_trace.v1.schema.json  receipt.comparison.v2.schema.json  topology_summary.v1.schema.json
scripts/: check_local_release.py  check_no_alloc.sh  check_release_readiness.py  (+1 more)
(+615 files in other folders)
