[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "mechlab-sdk"
version = "1.0.0"
description = "Model-agnostic Ink Receipts with a no_std, no_alloc Rust trust waist"
authors = [{name = "BLKBX Lab contributors"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=42",
  "jsonschema>=4.23",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Typing :: Typed",
]

[project.optional-dependencies]
research = ["markdown-it-py>=3"]
experimental = ["rich>=13"]
all = ["markdown-it-py>=3", "rich>=13"]
dev = ["maturin>=1.7,<2", "pyright[nodejs]", "pytest", "ruff"]

[project.scripts]
blkbx-lab = "blkbx_lab.cli:main"
mechlab = "blkbx_lab.cli:main"

[tool.maturin]
manifest-path = "rust/crates/ink-py/Cargo.toml"
python-source = "python"
python-packages = [
  "blkbx_lab",
  "blkbx_lab/adapters",
  "blkbx_lab/artifacts",
  "blkbx_lab/evidence",
  "blkbx_lab/experimental",
  "blkbx_lab/policies",
  "blkbx_lab/products",
  "blkbx_lab/products/blkbxs",
  "blkbx_lab/products/due",
  "blkbx_lab/products/mand8",
  "blkbx_lab/research",
  "blkbx_lab/schemas",
  "mech_lab",
  "blkbxs",
  "mand8",
  "mand8/bundles",
  "mand8/schemas",
  "due",
  "due/bundles",
  "due/schemas",
]
module-name = "blkbx_lab._ink_native"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --import-mode=importlib"

[tool.ruff]
target-version = "py310"
extend-exclude = [".pytest_cache", ".venv", "build", "dist", "qwen35-claims-"]
