[build-system]
requires = ["maturin>=1.6"]
build-backend = "maturin"

[project]
name = "hybrid-mechlab-rust"
version = "0.1.0a2"
description = "Internal optional Rust acceleration companion for hybrid-mechlab"
authors = [{name = "hybrid-mechlab team"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["hybrid-mechlab==0.1.0a2"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "Development Status :: 3 - Alpha",
]

[tool.maturin]
manifest-path = "../../rust/hm_pyo3/Cargo.toml"
features = []
