[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "due-sdk"
version = "0.9.0"
description = "DUE SDK makes AI actions legally defensible."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.23"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
