[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mand8-sdk"
version = "1.0.0"
description = "MAND8 SDK makes AI risk insurable."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.23"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
