[package]
name = "hm_examples"
version = "0.1.0-alpha.2"
edition = "2021"
license = "MIT"

[dependencies]
hm_core = { path = "../hm_core", default-features = false, features = ["std"] }
hm_std = { path = "../hm_std" }
serde_json = "1"

[[bin]]
name = "qwen35_profile"
path = "src/qwen35_profile.rs"

[[bin]]
name = "kernel_fixture"
path = "src/kernel_fixture.rs"
