[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blt"
version = "0.1.0"
description = "Block-Level Transcoder MVP for hybrid Qwen-style traces"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "BLT Contributors" }]
dependencies = [
  "numpy>=1.24",
  "pyarrow>=17.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
  "mypy>=1.11",
]
model = [
  "torch>=2.2",
  "transformers>=4.57.0",
]

[project.scripts]
blt-run-trace = "blt.cli.run_trace:main"
blt-fit-grouped-clt = "blt.cli.fit_grouped_clt:main"
blt-run-analysis = "blt.cli.run_analysis:main"
blt-export-hm-trace = "blt.cli.export_hm_trace:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["blt*"]

[tool.setuptools.package-data]
blt = ["configs/*.json", "configs/*.md"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
