[package]
name = "ink-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "ink"
path = "src/main.rs"

[dependencies]
clap.workspace = true
ink-receipt-v2 = { path = "../ink-receipt-v2" }
serde_json.workspace = true
