[package]
name = "ink-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "ink_core"
path = "src/lib.rs"

[dependencies]
ed25519-dalek.workspace = true
sha2.workspace = true

[dev-dependencies]
arbitrary = "1.0"
proptest = "1.0"
