[package]
name = "inkreceipts-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "inkreceipts_host"
path = "src/lib.rs"

[dependencies]
base64ct.workspace = true
dirs.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
inkreceipts-core = { path = "../ink-core" }
