[package]
name = "ink-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "ink_host"
path = "src/lib.rs"

[dependencies]
base64ct.workspace = true
dirs.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
hex.workspace = true
rand = { workspace = true, features = ["os_rng"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
ink-core = { path = "../ink-core" }
ink-receipt-v2 = { path = "../ink-receipt-v2" }
