[package]
name = "ink-issuer-service"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "ink-issuer-service"
path = "src/main.rs"

[dependencies]
axum.workspace = true
ink-host = { path = "../ink-host" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
