[package]
name = "ink-proofmail"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2.0"
uuid = { version = "1.0", features = ["v4"] }
hex = "0.4"

[lib]
name = "ink_proofmail"
path = "src/lib.rs"