[package]
name = "ink-proofmail"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
chrono.workspace = true
mime_guess = "2.0"
uuid = { version = "1.0", features = ["v4"] }
hex.workspace = true

[lib]
name = "ink_proofmail"
path = "src/lib.rs"
