[package]
name = "ink-receipt-v2"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
base64ct.workspace = true
chrono.workspace = true
hex.workspace = true
ink-core = { path = "../ink-core" }
ink-verify = { path = "../ink-verify" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lib]
name = "ink_receipt_v2"
path = "src/lib.rs"

[dev-dependencies]
ed25519-dalek = { workspace = true, features = ["rand_core"] }
