[package]
name = "ink-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
ink-receipt-v2 = { path = "../ink-receipt-v2" }
