[package]
name = "ink-vectors"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "ink_vectors"
path = "src/lib.rs"

[dependencies]
hex.workspace = true
ink-core = { path = "../ink-core" }
ink-verify = { path = "../ink-verify" }
