[package]
name = "ink-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "ink_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
hex.workspace = true
ink-core = { path = "../ink-core" }
ink-verify = { path = "../ink-verify" }
wasm-bindgen.workspace = true
